--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "npx eslint 'src/**/*.{js,jsx,ts,tsx,html}' --quiet --fix",
-    "format": "npx prettier 'src/**/*.{js,jsx,ts,tsx,html}' --write",
+    "lint": "npx eslint 'src/**/*.{js,ts,html}' --quiet --fix",
+    "format": "npx prettier 'src/**/*.{js,ts,html}' --write",
     "e2e": "ng e2e",
     "prepare": "husky install"
   },
